--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script>
 const API_KEY = "0a0b020a6c226f0392b26ac877876e19";
 
-// Safe mapping of GST Business Type codes
+// Mapping GST Business Type codes to readable text
 const businessTypeMap = {
     REG: "Regular",
     COM: "Composition",
@@ -65,20 +65,17 @@ function searchGST() {
             return;
         }
 
-        const d = data.data;
-
-        // Map Business Type safely
-        const businessType = d.dty ? (businessTypeMap[d.dty] || d.dty) : "N/A";
+        const details = data.data;
 
         let output = `
           <table>
-            <tr><th>GSTIN</th><td>${d.gstin || "N/A"}</td></tr>
-            <tr><th>Trade Name</th><td>${d.tradeNam || "N/A"}</td></tr>
-            <tr><th>Legal Name</th><td>${d.lgnm || "N/A"}</td></tr>
-            <tr><th>Status</th><td>${d.sts || "N/A"}</td></tr>
-            <tr><th>Registration Date</th><td>${d.rgdt ? formatDate(d.rgdt) : "N/A"}</td></tr>
-            <tr><th>Type</th><td>${d.ctb || "N/A"}</td></tr>
-            <tr><th>Business Type</th><td>${businessType}</td></tr>
+            <tr><th>GSTIN</th><td>${details.gstin || "N/A"}</td></tr>
+            <tr><th>Trade Name</th><td>${details.tradeNam || "N/A"}</td></tr>
+            <tr><th>Legal Name</th><td>${details.lgnm || "N/A"}</td></tr>
+            <tr><th>Status</th><td>${details.sts || "N/A"}</td></tr>
+            <tr><th>Registration Date</th><td>${details.rgdt ? formatDate(details.rgdt) : "N/A"}</td></tr>
+            <tr><th>Type</th><td>${details.ctb || "N/A"}</td></tr>
+            <tr><th>Business Type</th><td>${details.dty ? (businessTypeMap[details.dty] || details.dty) : "N/A"}</td></tr>
           </table>
         `;
         resultDiv.innerHTML = output;
